# qml-remote

./: .gitattributes  .gitignore  .wordlist.txt  OssiaControlSurface.qml  OssiaControlSurfaces.qml  OssiaPlayGlob.qml  OssiaPlayPause.qml  OssiaPlayPauseStop.qml  OssiaPosition.qml  OssiaReinitialize.qml  OssiaSlider.qml  OssiaSliders.qml  OssiaSqueleton.qml  OssiaStop.qml  OssiaTrigger.qml  OssiaVolume.qml  README.md  TimeSet.qml  main.qml  remote.html
.github/workflows/: build-android.yml  build-appimage.yml  build-macos.yml  build-wasm.yml  build-windows.yml  build.yaml  configspellcheck  spellcheck.yaml  spellcheck.yml  spelling_action.yml
PFA11/: OssiaPlayPauseStop2.qml  OssiaPositionPoint.qml  OssiaSpeeds.qml  OssiaTimeLine.qml  OssiaTriggers2.qml  TimeSet.qml  qml.qrc
config/: .spellcheck.yml
packaging/: ossia_remote.desktop
src/: CMakeLists.txt  ColorSlider.qml  Colorpicker.qml  Keyboard.qml  NumberBox.qml  OssiaColorPoint.qml  OssiaColorpicker.qml  OssiaConnection.qml  OssiaControlSurface.qml  OssiaControlSurfaces.qml  OssiaPlayGlob.qml  OssiaPlayPause.qml  OssiaPlayPauseStop.qml  OssiaPosition.qml  OssiaPositionPoint.qml  OssiaReinitialize.qml  OssiaSkeleton.qml  OssiaSlider.qml  OssiaSliders.qml  OssiaSpeed.qml  OssiaSpeeds.qml  OssiaSqueleton.qml  OssiaStop.qml  OssiaTimeLine.qml  OssiaTimeline.qml  OssiaTrigger.qml  OssiaTriggerModel.qml  OssiaTriggers.qml  OssiaTriggers2.qml  OssiaVolume.qml  OssiaWebSocket.qml  PFA11.pro  PFA11.pro.user.01d07d6  PFA11.pro.user.9ffa3d3  PFA11_en_150.ts  PanelBorder.qml  SBPicker.qml  ScoreAdresseIp.qml  ScoreButton.qml  ScoreButtons.qml  (+32 more)
src/Button/: ScoreButton.qml
src/Colorpicker/: Colorpicker.qml  NumberBox.qml  ScoreColorpicker.qml
src/Control/: Control.qml
src/ControlSurface/: ScoreControlSurface.qml  ScoreControlSurface.qml.autosave  ScoreControlSurfaceList.qml
src/ControlSurface/Controls/: Control.qml  ScoreControl.qml
src/ControlSurface/Controls/Bargraph/: ScoreBargraph.qml  ScoreBargraphs.qml
src/ControlSurface/Controls/Button/: ScoreButton.qml  ScoreButtons.qml
src/ControlSurface/Controls/Colorpicker/: Checkerboard.qml  ColorSlider.qml  Colorpicker.qml  NumberBox.qml  PanelBorder.qml  SBPicker.qml  ScoreColorPoint.qml  ScoreColorpicker.qml
src/ControlSurface/Controls/ComboBox/: ScoreComboBox.qml  ScoreComboBoxes.qml
src/ControlSurface/Controls/Generic/: ScoreGenericControl.qml  ScoreGenericControls.qml
src/ControlSurface/Controls/ImpulseButton/: ScoreImpulseButton.qml  ScoreImpulseButtons.qml  ScoreImpulseButtons.qml.autosave
src/ControlSurface/Controls/Knob/: ScoreKnob.qml  ScoreKnobs.qml
src/ControlSurface/Controls/LineEdit/: ScoreLineEdit.qml  ScoreLineEdits.qml
src/ControlSurface/Controls/Position/: ScorePosition.qml  ScorePositionPoint.qml
src/ControlSurface/Controls/RangeSlider/: ScoreRangeSlider.qml  ScoreRangeSliders.qml
src/ControlSurface/Controls/Slider/: ScoreSlider.qml  ScoreSliders.qml
src/ControlSurface/Controls/SpinBox/: ScoreSpinBox.qml  ScoreSpinBoxes.qml
src/ControlSurface/Controls/VectorSlider/: ScoreVectorSlider.qml  ScoreVectorSliders.qml
src/ControlSurface/Controls/VectorSpinBox/: ScoreVectorSpinBox.qml  ScoreVectorSpinBoxes.qml
src/ControlSurface/Controls/XYList/: ScoreXYList.qml  ScoreXYLists.qml
src/Explorer/: Explorer.qml
src/HideButton/: ScoreHideButton.qml  ScoreViewToggle.qml
src/IpAddress/: ScoreConnection.qml  ScoreDisconnection.qml  ScoreIpAddress.qml
src/IpAdress/: ScoreConnection.qml  ScoreDisconnection.qml  ScoreIpAdress.qml
src/ObjectSkeletons/: ScoreSliderSkeleton.qml
src/PlayPauseStop/: ScorePlayGlob.qml  ScorePlayPause.qml  ScorePlayPauseStop.qml  ScoreReinitialize.qml  ScoreStop.qml
src/Skeleton/: ScoreButtonPanel.qml  ScorePanelButton.qml  ScoreSkeleton.qml
src/Slider/: ScoreSlider.qml  ScoreSliders.qml
src/Speed/: ScoreSpeed.qml
src/Speeds/: ScoreSpeeds.qml
src/TimeSet/: TimeSet.qml
src/Timeline/: ScoreTimeline.qml
src/Trigger/: ScoreTrigger.qml  ScoreTriggers.qml
src/Utility/: Skin.qml  Uuid.qml  utility.js
src/Volume/: ScoreAudioPanel.qml  ScoreVolume.qml
src/WebSocket/: ScoreWebSocket.qml
